[gd_scene load_steps=20 format=2]

[ext_resource path="res://Juego/Naves/EstacionesRecarga/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/BaseEnemiga.gd" type="Script" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/EstacionEnemiga_02.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/EstacionEnemiga_01.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/EstacionEnemiga_03.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/EstacionEnemiga_04.png" type="Texture" id=6]
[ext_resource path="res://Juego/SFX/dnio.ogg" type="AudioStream" id=7]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/EstacionEnemiga_05.png" type="Texture" id=8]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/AreaColision.gd" type="Script" id=9]
[ext_resource path="res://Juego/Naves/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=10]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/PosicionesSpawn.gd" type="Script" id=11]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/RutaEnemigos.gd" type="Script" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.6068
height = 275.684

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 79.8616, 21.1277 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 113.803, 12.6424 )

[sub_resource type="Animation" id=4]
length = 0.001

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaAtraccion/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=6]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaAtraccion/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( -117.468, -1.5874, 117.468, 1.5874, -1.52588e-05, -299.307, -26.9858, -11.1118, 26.9858, 11.1118, 118.351, -228.168, -50.7968, -38.0976, 50.7968, 38.0976, 275.022, -276.102, -23.811, -63.496, 23.811, 63.496, 205.188, -122.454, 1.5874, -76.1952, -1.5874, 76.1952, 299.786, 0.0956545, 15.1191, -45.3572, -15.1191, 45.3572, 205.188, 124.841, 27.7183, -45.3572, -27.7183, 45.3572, 282.585, 275.861, 80.6349, -7.55953, -80.6349, 7.55953, 101.361, 255.095, 80.6349, 0, -80.6349, 0, 0.229759, 299.946, 50.3968, 20.1587, -50.3968, -20.1587, -96.8522, 247.545, 30.2381, 37.7976, -30.2381, -37.7976, -283.739, 281.524, -17.6389, 50.3968, 17.6389, -50.3968, -219.556, 139.943, 5.4755, 59.5909, -5.4755, -59.5909, -299.568, -0.306862, -20.1587, 55.4365, 20.1587, -55.4365, -225.219, -116.791, -38.3493, 39.685, 38.3493, -39.685, -283.739, -269.699, -60.3212, 4.7622, 60.3212, -4.7622, -109.129, -231.655, -93.6567, 12.6992, 93.6567, -12.6992, -1.52588e-05, -299.727 )
}

[node name="BaseEnemiga" type="Node2D"]
script = ExtResource( 2 )
orbital = ExtResource( 10 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 27
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 45.2548 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 5.65686, -53.7401 )
shape = SubResource( 3 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="AreaAtraccion" index="0"]
visible = false

[node name="Sprite" parent="AreaAtraccion" index="1"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "giro_horario"
anims/default = SubResource( 4 )
anims/giro_antihorario = SubResource( 5 )
anims/giro_horario = SubResource( 6 )

[node name="Impacto_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Sprites" type="Node2D" parent="."]
modulate = Color( 0.67, 0.76, 0.78, 0.88 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( -55.238, -54 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 86, -54 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 28.995, -54 )
texture = ExtResource( 8 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 0, 44.613 )
texture = ExtResource( 6 )

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -300 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 300, 0 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 300 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -300, 0 )

[node name="Node2D" type="Node2D" parent="."]

[node name="RutaEnemigos" type="Path2D" parent="."]
curve = SubResource( 7 )
script = ExtResource( 12 )

[node name="TimerSpawnEnemigos" type="Timer" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnEnemigos" to="." method="_on_TimerSpawnEnemigos_timeout"]

[editable path="AreaAtraccion"]
